[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Primitives for DVM consensus"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "dp_consensus"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"

[dependencies]
# crates
codec    = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
rlp      = { version = "0.5", default-features = false }
sha3     = { version = "0.8", default-features = false }
# substrate
sp-core    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std     = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std = [
	"codec/std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
]

substrate-std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
]
