[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Ethereum primitives for Hyperspace Relay"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "ethereum-primitives"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
array-bytes = { version = "1.1.0" }
codec  = { package = "parity-scale-codec", version = "1.3.7", default-features = false, features = ["derive"] }
ethash = { default-features = false, git = "https://github.com/new-mvs/rust-ethash" }
serde  = { version = "1.0.124", optional = true, features = ["derive"] }
# hyperspace
merkle-patricia-trie = { default-features = false, path = "../merkle-patricia-trie" }
# github
ethbloom        = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
ethereum-types  = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
fixed-hash      = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
impl-codec      = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
impl-rlp        = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
keccak-hash     = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
primitive-types = { default-features = false, features = ["codec", "rlp"], git = "https://github.com/new-mvs/parity-common.git" }
rlp             = { default-features = false, git = "https://github.com/new-mvs/parity-common.git" }
rlp-derive      = { git = "https://github.com/new-mvs/parity-common.git" }
# substrate
sp-io      = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[dev-dependencies]
# crates
keccak-hasher = { version = "0.15.3" }
serde_json    = { version = "1.0.62" }
# github
triehash = { git = "https://github.com/new-mvs/parity-common.git" }
# substrate
frame-support = { git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"github-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"ethash/std",
	"merkle-patricia-trie/std",
]
github-std    = [
	"ethbloom/std",
	"ethereum-types/std",
	"ethereum-types/serialize",
	"fixed-hash/std",
	"impl-codec/std",
	"impl-rlp/std",
	"keccak-hash/std",
	"primitive-types/std",
	"rlp/std",
]
substrate-std = [
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

deserialize  = []
with-new-dag = []
