[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "Primitives for Hyperspace EVM"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "hyperspace-evm-primitives"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# crates
codec                 = { default-features = false, package = "parity-scale-codec", version = "1.3.5" }
evm                   = { default-features = false, git = "https://github.com/darwinia-network/evm.git", branch = "darwinia", features = ["with-codec"] }
impl-trait-for-tuples = "0.1"
serde                 = { version = "1.0.118", optional = true, features = ["derive"] }
# substrate
sp-core = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std = [
	"codec/std",
	"evm/std",
	"evm/with-serde",
	"serde",
]

substrate-std = [
	"sp-core/std",
	"sp-std/std",
]
