[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Primitives for Hyperspace EVM"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "hyperspace-evm-primitives"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "1.3.7", default-features = false }
evm                   = { version = "0.22.0", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = { version = "0.2.0" }
serde                 = { version = "1.0.124", optional = true, features = ["derive"] }
# substrate
sp-core = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std  = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std = [
	"codec/std",
	"evm/std",
	"evm/with-serde",
	"serde",
]

substrate-std = [
	"sp-core/std",
	"sp-std/std",
]
