[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "merkle-patricia-trie"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[[bench]]
harness = false
name    = "trie"

[dependencies]
# crates
array-bytes = { version = "1.1.0" }
hash        = { package = "keccak-hash", version = "0.7.0", default-features = false }
hashbrown   = { version = "0.9.1" }
rlp         = { version = "0.5.0", default-features = false }
# substrate
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[dev-dependencies]
# crates
criterion      = { version = "0.3.4" }
ethereum-types = { version = "0.11.0" }
hex            = { version = "0.4.3" }
rand           = { version = "0.8.3" }
uuid           = { version = "0.8.2", features = ["serde", "v4"] }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
	"hash/std",
	"rlp/std",
]
substrate-std = ["sp-std/std"]
