[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Hyperspace Relay Primitives"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-relay-primitives"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = ["codec/std"]
substrate-std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]
