[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Consensus for hyperspace dvm"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dvm-consensus"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec       = { package = "parity-scale-codec", version = "1.3.7", features = ["derive"] }
derive_more = { version = "0.99.11" }
ethereum    = { version = "0.6.0", features = ["with-codec"] }
futures     = { version = "0.3.13", features = ["compat"] }
log         = { version = "0.4.14" }
# hyperspace
dvm-consensus-primitives = { path = "../../../primitives/consensus/" }
# substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/new-mvs/substrate", branch = "latest" }
sc-client-api       = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-api              = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-block-builder    = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-blockchain       = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-consensus        = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-core             = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-inherents        = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime          = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-timestamp        = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
