[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Consensus for hyperspace dvm"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dc-consensus"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.0.0"

[dependencies]
# crates
codec       = { package = "parity-scale-codec", version = "1.3.7", features = ["derive"] }
dc-db       = { path = "../db" }
derive_more = { version = "0.99.11" }
futures     = { version = "0.3.13", features = ["compat"] }
log         = { version = "0.4.14" }
# hyperspace
dp_consensus            = { path = "../../../primitives/consensus/" }
dvm-rpc-runtime-api     = { path = "../../../frame/dvm/rpc/runtime-api"}
# substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sc-client-api       = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-api              = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-block-builder    = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-blockchain       = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-consensus        = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-core             = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-inherents        = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-runtime          = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-timestamp        = { git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
