[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Dvm database backend"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dc-db"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.0.0"

[dependencies]
# crates
codec           = { package = "parity-scale-codec", version = "1.3.7", features = ["derive"] }
kvdb            = "0.8.0"
kvdb-rocksdb    = "0.10.0"
parking_lot     = "0.11.1" 
# substrate
sp-core         = {  git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-database     = {  git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-runtime      = {  git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
