[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Dvm database backend"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dc-db"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# crates
codec        = { package = "parity-scale-codec", version = "2.0.1", features = ["derive"] }
kvdb         = { version = "0.9.0" }
kvdb-rocksdb = { version = "0.11.0" }
parking_lot  = { version = "0.11.1" }
# substrate
sp-core     = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-database = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-runtime  = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
