[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Mapping sync logic for dvm."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dc-mapping-sync"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"

[dependencies]
# substrate
sp-api          = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-blockchain   = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sc-client-api   = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime      = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
# hyperspace
dc-consensus           = { path = "../consensus" }
dc-db                  = { path = "../db" }
dp_consensus           = { path = "../../../primitives/consensus/" }
dvm-rpc-runtime-api    = { path = "../../../frame/dvm/rpc/runtime-api"}
# crates
futures         = { version = "0.3.1", features = ["compat"] }
futures-timer   = "3.0.1"
log             = "0.4.8"
