[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Mapping sync logic for dvm."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "dc-mapping-sync"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# substrate
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-api        = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-blockchain = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-runtime    = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
# hyperspace
dc-db               = { path = "../db" }
dp_consensus        = { path = "../../../primitives/consensus/" }
dvm-rpc-runtime-api = { path = "../../../frame/dvm/rpc/runtime-api" }
# crates
futures       = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log           = "0.4.8"
